[package]
name = "pacosako-tool-server"
version = "0.1.0"
authors = ["Rolf Kreibaum <rolf.kreibaum@posteo.de>"]
edition = "2021"
default-run = "pacosako-tool-server"

# Add this section to specify multiple binaries
[[bin]]
name = "pacosako-tool-server"
path = "src/main.rs"

[[bin]]
name = "cache_hash"
path = "src/utils/cache_hash.rs"

[dependencies]
aes-gcm = { version = "0.10.2", features = ["std"] }
argon2 = { version = "0.5.1", features = ["std"] }
axum = { version = "0.6.19", features = ["query", "ws"] }
base64 = "0.21.3"
dashmap = "5.5.0"
rand = "0.8.5"
tera = "1.19.0"
tower-http = { version = "0.4.3", features = ["fs"] }
futures-util = "0.3.28"
kanal = "0.1.0-pre7"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tokio-util = "0.7.8"
tower-cookies = "0.9.0"
toml = "0.7.6"
pacosako-rust = { path = "../lib" }
ws = "0.9.1"
uuid = { version = "1.0.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.1.43"
simplelog = "0.12.0"
log = "0.4"
async-std = { version = "1.7.0", features = ["attributes"] }
sqlx = { version = "0.5", features = [
    "sqlite",
    "runtime-async-std-rustls",
    "migrate",
] }
async-tungstenite = { version = "0.13", features = ["async-std-runtime"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
regex = "1"
lazy_static = "1.4.0"
reqwest = "0.11.10"
blake3 = "1.3.1"
cached = { version = "0.44.0", default-features = false, features = [
    "proc_macro",
] }
