[package]
name = "pacosako-tool-server"
version = "0.1.0"
authors = ["Rolf Kreibaum <rolf.kreibaum@posteo.de>"]
edition = "2021"
default-run = "pacosako-tool-server"

# Add this section to specify multiple binaries
[[bin]]
name = "pacosako-tool-server"
path = "src/main.rs"

[[bin]]
name = "cache_hash"
path = "src/utils/cache_hash.rs"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0"
argon2 = { version = "0.5.2", features = ["std"] }
axum = { version = "0.6.20", features = ["query", "ws"] }
base64 = "0.21.5"
blake3 = "1.5.0"
cached = { version = "0.46.0", default-features = false, features = [
    "proc_macro",
] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5.3"
futures-util = "0.3.29"
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4"
once_cell = "1.18.0"
pacosako-rust = { path = "../lib" }
rand = "0.8.5"
regex = "1"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.1"
sqlx = { version = "0.5", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
] }
tera = "1.19.1"
thiserror = "1.0"
time = "0.1.43"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.8"
toml = "0.8.6"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }
uuid = { version = "1.5.0", features = ["v4"] }

# Required for Flamegraphs
# [profile.release]
# debug = true
