[package]
name = "frontend-wasm"
version = "0.1.0"
authors = ["Rolf Kreibaum <rolf.kreibaum@posteo.de>"]
edition = "2021"
description = "Pacosako frontend support library compiled to WebAssembly"
repository = "https://github.com/kreibaum/pacosako"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tract-onnx = "0.21.3"
# We are not using this directly, but this is still required for wasm-bindgen to work.
# See https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.64", features = [
    "WebSocket",
    "MessageEvent",
    "console",
    "WorkerGlobalScope",
    "Location",
    "WorkerLocation",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pacosako-rust = { path = "../lib" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Skips wasm-opt for local build. This is way faster.
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
