[package]
name = "pypacosako"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pypacosako"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pacosako-rust = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"